--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,12 @@
 ---
+// Component imports
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Gonzalo Izaguirre</title>
-	</head>
-	<body>
-		<h1>Gonzalo Izaguirre</h1>
-	</body>
-</html>
+<MainLayout title="Gonzalo Izaguirre" description="Blog de gonzalo">
+	<div class="flex items-center justify-center">
+		<span class="font-extrabold whitespace-nowrap text-center text-transparent text-3xl sm:text-8xl bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
+			Gonzalo Izaguirre
+		</span>
+	</div>
+</MainLayout>
